JumpScript/tests/baselines/reference/inlineSources2.errors.txt
tests/cases/compiler/a.jump(2,1): error TS2304: Cannot find name 'console'.
tests/cases/compiler/b.jump(2,1): error TS2304: Cannot find name 'console'.


==== tests/cases/compiler/a.jump (1 errors) ====
    var a = 0;
    console.log(a);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.
    
==== tests/cases/compiler/b.jump (1 errors) ====
    var b = 0;
    console.log(b);
    ~~~~~~~
!!! error TS2304: Cannot find name 'console'.